--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>The Bike Shed Conwy</title>
 </head>
 
@@ -27,12 +29,14 @@
                 </ul>
             </nav>
         </a>
-        
+
     </header>
 
-    <section>
-        <div id="hero-image"></div>
-        hero image and text test
+    <section id="hero-outer">
+        <div id="hero-image">
+
+        </div>
+
     </section>
     <section>
         expert care for your bike
@@ -41,9 +45,11 @@
         packages available column
     </section>
     <footer>
-        Social media accounts links oin here
+        Social media accounts links on here
     </footer>
 
 </body>
+
+
 
 </html>
