--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>The Bike Shed Conwy</title>
+    <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <a href="index.html">
-            <h2>The Bike Shed Conwy</h2>
+            <h2 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h2>
             <nav>
-                <ul>
+                <ul id="menu">
                     <li>
                         <a href="index.html">Home</a>
                     </li>
@@ -37,7 +38,13 @@
 
         </div>
 
-    </section>
+        </div>
+        <div id="cover-text">
+            <h2>The Conwy Bike Shed </h2>
+            <h3> A cycle repair shop in the heart of Conwy </h3>
+        </div>
+         
+        
     <section>
         expert care for your bike
     </section>
@@ -51,5 +58,7 @@
 </body>
 
 
+
+</html>
 
 </html>
