--- a/booknow.html
+++ b/booknow.html
@@ -45,7 +45,10 @@
         </div>
 
         <section>
-            <form>
+            <form method="post" action="https://formdump.codeinstitute.net/" class="book-now">
+                <div class="mb-3">
+                <input class="form-control" type="text" placeholder="Full Name" aria-label="name">
+                </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -63,7 +66,13 @@
             </form>
         </section>
         <footer>
-            Social media accounts links on here
+            <ul class="social-networks">
+                <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-square-twitter"></i></a></li>
+                <li><a href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-square-youtube"></i></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+                </li>
+            </ul>
         </footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
