--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <nav>
                 <ul id="menu">
                     <li>
-                        <a href="index.html">Book Now</a>
+                        <a href="booknow.html">Book Now</a>
                     </li>
                     <li>
-                        <a href="index.html">Services</a>
+                        <a href="services.html">Services</a>
                     </li>
 
                     <li>
@@ -124,7 +124,13 @@
 
     </section>
     <footer>
-        Social media accounts links on here
+        <ul class="social-networks">
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-square-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-square-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
