--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>The Bike Shed Conwy</title>
+    <title>The Bike Shed Conwy - Services<title>
     <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
 </head>
 
@@ -19,14 +19,13 @@
             <nav>
                 <ul id="menu">
                     <li>
-                        <a href="index.html">Book Now</a>
-                    </li>
-                    <li>
-                        <a href="index.html">Services</a>
-                    </li>
-
-                    <li>
                         <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="services.html" class="active">Services</a>
+                    </li>
+                    <li>
+                        <a href="booknow.html">Book Now</a>
                     </li>
                 </ul>
             </nav>
@@ -116,11 +115,14 @@
     </section>
     <footer>
         <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-square-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-square-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
-            </li>
+            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
         </ul>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
