--- a/booknow.html
+++ b/booknow.html
@@ -38,12 +38,12 @@
 
         </div>
 
-        </div>
+        
         <div id="cover-text">
             <h3> A cycle repair shop in the heart of Conwy </h3>
         </div>
 
-        <section>
+        <section class="">
             <form method="post" action="https://formdump.codeinstitute.net/" class="book-now">
                 <div class="mb-3">
                 <input class="form-control" type="text" placeholder="Full Name" aria-label="name">
