--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-</html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -50,14 +49,14 @@
         <div class="row" id="left-about">
             <div class="col-md">
                 <div class="left-about-heading">
-                <h3>Experts <i class="fa-solid fa-screwdriver-wrench"></i></h2>
+                <h3>Experts <i class="fa-solid fa-screwdriver-wrench"></i></h3>
                 <hr>
                 <p>Our technicians are experts in their craft. Cyclists themselves they will take care of your bike as if it were their own.</p>
                 </div>
             </div>    
             <div class="col-md">
                 <div class="left-about-heading">
-                <h3>Honest Pricing <i class="fa-solid fa-wallet"></i></h2>
+                <h3>Honest Pricing <i class="fa-solid fa-wallet"></i></h3>
                 <hr>
                 <p>We will always give you the price before we do the work, no hidden extras.</p>
                 </div>
@@ -66,14 +65,14 @@
         <div class="row" id="right-about">
             <div class="col-md">
                 <div class="right-about-heading">
-                    <h3>Fast Service <i class="fa-regular fa-stopwatch"></i></h2>
+                    <h3>Fast Service <i class="fa-solid fa-stopwatch"></i></h3>
                     <hr>
                     <p>We will get any repairs back to you in 48 hours, to get you back out riding.</p>
                 </div>
             </div>    
             <div class="col-md">
                 <div class="right-about-heading">
-                    <h3>Free Coffee <i class="fa-solid fa-mug-hot"></i></h2>
+                    <h3>Free Coffee <i class="fa-solid fa-mug-hot"></i></h3>
                     <hr>
                     <p>Grab a coffee and a flick through a selection of magazines while you wait for your repair.</p>
                 </div>
@@ -84,35 +83,45 @@
 
     <section>
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="card">
                     <img src="assets/images/reargear.jpg" class="card-img-top"
                         alt="A close up of a bicycle's rear gears.">
                     <div class="card-body">
-                        <h5 class="card-title">Brake Service</h5>
-                        <p class="card-text">Service rim or dick brakes and also replace pads and cables</p>
+                        <h5 class="card-title">Gear Service</h5>
+                        <p class="card-text">Service gears and mechanisms</p>
                         <a href="booknow.html" class="btn btn-primary">Book now!</a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="card">
-                    <img src="assets/images/pedal.jpg" class="card-img-top" alt="A close up of a bicycle's pedal.">
+                    <img src="assets/images/pedal2.jpg" class="card-img-top" alt="A close up of a bicycle's pedal.">
                     <div class="card-body">
-                        <h5 class="card-title">Fit cleated pedals</h5>
+                        <h5 class="card-title">Fit Cleated Pedals</h5>
                         <p class="card-text">Fit clip-in pedals while you wait.</p>
-                        <a href="#" class="btn btn-primary">Book now</a>
+                        <a href="booknow.html" class="btn btn-primary">Book now</a>
                     </div>
                 </div>
 
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="assets/images/brakedisc.jpg" class="card-img-top" alt="A close up of a bicycle's brakedisc.">
                     <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Brake Service</h5>
+                        <p class="card-text">Service v type or disk brakes and repalce cables and pads.</p>
+                        <a href="booknow.html" class="btn btn-primary">Book now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="card">
+                    <img src="assets/images/bikemuddy.jpg" class="card-img-top" alt="A close up of muddy bike.">
+                    <div class="card-body">
+                        <h5 class="card-title">Full Bike Clean</h5>
+                        <p class="card-text">Get a full bike clean and re-oiling of chain and gears.</p>
+                        <a href="booknow.html" class="btn btn-primary">Book now</a>
                     </div>
                 </div>
             </div>
@@ -122,22 +131,27 @@
        some services
 
     </section>
-    <footer>
-        <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
-        </ul>
-    </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-</body>
 
+<footer>
+    <ul class="social-networks">
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opens in a new tab)"><i
+                    class="fa-brands fa-square-facebook"></i></a></li>
+        <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+        </li>
+        <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+        </li>
+        <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (opens in a new tab)"><i
+                    class="fa-brands fa-square-instagram"></i></a>
+    </ul>
+</footer>
+</body>
 </html>
 
