--- a/services.html
+++ b/services.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>The Bike Shed Conwy - Services<title>
+    <title>The Bike Shed Conwy - Services</title>
     <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
 </head>
 
@@ -44,11 +44,61 @@
         </div>
 
     </section>
-
-    <section>
+    <section class="service-header">
+        <h2>Select from our most popular services or scroll down for a full services list</h2>
+    </section>    
+    <section class="services">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="assets/images/reargear.png" class="card-img-top" alt="A close up of a bicycle's rear gears.">
+                    <div class="card-body">
+                        <h5 class="card-title">Gear Service</h5>
+                        <p class="card-text">Service gears and mechanisms</p>
+                        <a href="booknow.html" class="btn btn-primary">Book now!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="assets/images/pedal2.png" class="card-img-top" alt="A close up of a bicycle's pedal.">
+                    <div class="card-body">
+                        <h5 class="card-title">Fit Cleated Pedals</h5>
+                        <p class="card-text">Fit clip-in pedals while you wait.</p>
+                        <a href="booknow.html" class="btn btn-primary">Book now</a>
+                    </div>
+                </div>
+    
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="assets/images/brakedisc.png" class="card-img-top" alt="A close up of a bicycle's brakedisc.">
+                    <div class="card-body">
+                        <h5 class="card-title">Brake Service</h5>
+                        <p class="card-text">Service v type or disk brakes and repalce cables and pads.</p>
+                        <a href="booknow.html" class="btn btn-primary">Book now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="assets/images/bikemuddy.png" class="card-img-top" alt="A close up of muddy bike.">
+                    <div class="card-body">
+                        <h5 class="card-title">Full Bike Clean</h5>
+                        <p class="card-text">Get a full bike clean and re-oiling of chain and gears.</p>
+                        <a href="booknow.html" class="btn btn-primary">Book now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="service-header">
+        <h2>Full services list</h2>
+    </section>
+    <section class="servicelist">
         <div class="container">
             <table class="table table-striped table-border table-hover caption-top">
-                <caption>A list of our services and prices</caption>
+                <caption id="caption">A list of our services and prices</caption>
                 <tr>
                     <th>Service</th>
                     <th>Price</th>
