--- a/services.html
+++ b/services.html
@@ -45,7 +45,9 @@
 
     </section>
     <section class="service-header">
-        <h2>Select from our most popular services or scroll down for a full services list</h2>
+        <h2>Select from our most popular services</h2> 
+            <h2>or</h2> 
+            <h2>scroll down for a full services list</h2>
     </section>    
     <section class="services">
         <div class="row">
@@ -96,10 +98,9 @@
         <h2>Full services list</h2>
     </section>
     <section class="servicelist">
-        <div class="container">
-            <table class="table table-striped table-border table-hover caption-top">
-                <caption id="caption">A list of our services and prices</caption>
-                <tr>
+        <div class="container services-table">
+            <table class="table table-striped table-border table-hover">
+                 <tr>
                     <th>Service</th>
                     <th>Price</th>
                     <th>Book</th>
