added validation documentation and fixed errors

--- a/booknow.html
+++ b/booknow.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h1>
+            <h1 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h1></a>
             <nav>
                 <ul id="menu">
                     <li>
@@ -29,7 +29,7 @@
                     </li>
                 </ul>
             </nav>
-        </a>
+        
 
     </header>
 
@@ -68,7 +68,7 @@
                     <option value="109"> Pedal Replacement</option>
                     <option value="110"> Handlebar Tape Replacement</option>
                     <option value="111"> Full Service</option>
-                    <option value="112"> Full Bike Clean</option><br>
+                    <option value="112"> Full Bike Clean</option></select>
                     <input type="submit" value="Request Booking" class="button"><br>
                 </form>
             </div>
