added final tweaks to css and some validation files

--- a/booknow.html
+++ b/booknow.html
@@ -38,17 +38,17 @@
 
         </div>
     
-
         <div id="cover-text">
             <h3> A cycle repair shop in the heart of Conwy </h3>
         </div>
     </section>
-    <section id="book-now-section">
+    <div id="booknow">
+        <section id="book-now-section">
             <div><h2 id="booknowheader">Book Now</h2><br>
                 <p> Complete the form below and we'll contact you with our availability</P>
             </div>
             <div id="formdiv">
-                <form method="POST" action="https://formdump.codeinstitute.net/" target="_blank">
+                <form method="POST" action="https://formdump.codeinstitute.net" target="_blank">
                     <label for="fullname">Your full name:</label><br>
                     <input type="text" class="text-input text-input-line" id="fullname" name="fullname" placeholder="*Your name" required><br><br>
                     <label for="email">Email address:</label><br>
@@ -72,7 +72,8 @@
                     <input type="submit" value="Request Booking" class="button"><br>
                 </form>
             </div>
-    </section>
+        </section>
+    </div>
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
