--- a/services.html
+++ b/services.html
@@ -103,8 +103,8 @@
         <h2>Full services list</h2>
     </section>
     <div class="servicelist">
-        <div class="container services-table">
-            <table class="table table-striped table-border table-hover">
+        <div class="container-fluid services-table">
+            <table class="table table-striped table-border table-hover center">
                  <tr>
                     <th>Service</th>
                     <th>Price</th>
