added contact page

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <title>The Bike Shed Conwy - Book Now - Thanks</title>
+    <title>The Bike Shed Conwy - Book Now</title>
     <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
 </head>
 
@@ -26,7 +26,10 @@
                     <a href="services.html">Services</a>
                 </li>
                 <li>
-                    <a href="booknow.html" class="active">Book Now</a>
+                    <a href="booknow.html">Book Now</a>
+                </li>
+                <li>
+                    <a href="contact.html" class="active">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -43,13 +46,44 @@
             <h3> A cycle repair shop in the heart of Conwy </h3>
         </div>
     </section>
-    <section id="thanks-page">
-            <div>
-                <h2 id="thanks-header">Thanks for making a service booking request</h2><br>
-                <p> We'll be in touch to contact you with our availability.</P>
+    <div class="container-fluid contact-us" id="contact-us">
+        <h2 id="contact-us-header"> Contact Us</h2>
+    </div>
+    <div id="location-icon"><h3>Cycle to us! <i class="fa-solid fa-location-dot"></i></h3>
+    </div>
+    <section id="map">
+    <div class="ratio ratio-16x9 map ">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2317.632589996434!2d-3.826887086085289!3d53.27978255983083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48651e85d4cd176d%3A0x4c407a5d3d49f90c!2sConwy%20Castle!5e0!3m2!1sen!2suk!4v1685832749676!5m2!1sen!2suk"
+            width="600" height="450" style="border: 3px solid #2600ff; border-radius: 10px;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    </section>
+    <section class id="contact-types">
+    <div class="row" class="contact">
+        <div class="col-md">
+            <div class="phone">
+                <h3>Phone <i class="fa-solid fa-phone"></i></h3>
+                <hr>
+                <p>Tel: 0333 344 5637</p>
             </div>
-    </section>        
-    
+        </div>
+        <div class="col-md">
+            <div class="email">
+                <h3>E-mail <i class="fa-solid fa-at"></i></h3>
+                <hr>
+                <p>hello@conwybikehub.co.uk</p>
+            </div>
+        </div>
+        <div class="col-md">
+            <div class="coffee">
+                <h3>Chat <i class="fa-solid fa-mug-hot"></i></h3>
+                <hr>
+                <p>Drop in to see us and have a coffee.<br> We're open: <br> Mon-Sat 9am - 5pm.<br> On Sunday we go cycling! <i class="fa-solid fa-person-biking fa-flip-horizontal"></i></p>
+            </div>
+        </div>
+    </div>
+    </section>         
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
