--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <li>
                         <a href="booknow.html">Book Now</a>
                     </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
                 </ul>
             </nav>
         
