replaced png images with webp and added to readme

--- a/services.html
+++ b/services.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Imports for bootstrap, font awesome, google fonts, stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
     <title>The Bike Shed Conwy - Services</title>
     <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
 </head>
@@ -52,9 +55,10 @@
     </section>    
     <section class="services">
         <div class="row">
+            <!-- Gear service -->
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img src="assets/images/reargear.png" class="card-img-top" alt="A close up of a bicycle's rear gears.">
+                    <img src="assets/images/reargear.webp" class="card-img-top" alt="A close up of a bicycle's rear gears.">
                     <div class="card-body">
                         <h5 class="card-title">Gear Service</h5>
                         <p class="card-text">Service gears and mechanisms</p>
@@ -64,9 +68,10 @@
                     </div>
                 </div>
             </div>
+            <!-- Fit pedal service -->
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img src="assets/images/pedal2.png" class="card-img-top" alt="A close up of a bicycle's pedal.">
+                    <img src="assets/images/pedal2.webp" class="card-img-top" alt="A close up of a bicycle's pedal.">
                     <div class="card-body">
                         <h5 class="card-title">Fit Cleated Pedals</h5>
                         <p class="card-text">Fit clip-in pedals while you wait.</p>
@@ -77,9 +82,10 @@
                 </div>
     
             </div>
+            <!-- Brake service -->
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img src="assets/images/brakedisc.png" class="card-img-top" alt="A close up of a bicycle's brakedisc.">
+                    <img src="assets/images/brakedisc.webp" class="card-img-top" alt="A close up of a bicycle's brakedisc.">
                     <div class="card-body">
                         <h5 class="card-title">Brake Service</h5>
                         <p class="card-text">Service v type or disk brakes and repalce cables and pads.</p>
@@ -89,9 +95,10 @@
                     </div>
                 </div>
             </div>
+            <!-- Full clean service -->
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card">
-                    <img src="assets/images/bikemuddy.png" class="card-img-top" alt="A close up of muddy bike.">
+                    <img src="assets/images/bikemuddy.webp" class="card-img-top" alt="A close up of muddy bike.">
                     <div class="card-body">
                         <h5 class="card-title">Full Bike Clean</h5>
                         <p class="card-text">Get a full bike clean and re-oiling of chain and gears.</p>
@@ -102,6 +109,7 @@
             </div>
         </div>
     </section>
+    <!-- Full service list -->
     <section class="service-header">
         <h2>Full services list</h2>
     </section>
@@ -172,6 +180,7 @@
             </table>
         </div>
     </div>
+    <!-- FOOTER -->
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
@@ -183,7 +192,7 @@
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
         </ul>
-    </footer>
+        </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
