--- a/booknow.html
+++ b/booknow.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Imports for bootstrap, font awesome, google fonts, stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
     <title>The Bike Shed Conwy - Book Now</title>
     <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
 </head>
@@ -56,8 +59,8 @@
                     <input type="text" class="text-input text-input-line" id="fullname" name="fullname" placeholder="*Your name" required><br><br>
                     <label for="email">Email address:</label><br>
                     <input type="email" class="text-input text-input-line" id="email" name="email" placeholder="*Email" required><br><br>
-                    <label for="phone">Mobile Number:</label><br>
-                    <input type="tel" id="phone" name="phone" pattern="[0-9]{11}" required><br>
+                    <label for="phone">Mobile Number: e.g 07923 456 789</label><br>
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]" required><br>
                     <label for="service-select">Select a Service</label><br>
                     <select id="service-select" name="service-select">
                     <option value="101"> Flat Tyre Repair</option>
@@ -77,6 +80,7 @@
             </div>
         </section>
     </div>
+    <!-- FOOTER -->
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
