--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Imports for bootstrap, font awesome, google fonts, stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
     <title>The Bike Shed Conwy</title>
     <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
 </head>
@@ -81,7 +84,8 @@
                 </div>
             </div>
         </div>    
-    </section>    
+    </section>  
+<!-- FOOTER -->
 <footer>
     <ul class="social-networks">
         <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
