--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- nav bar -->
     <header>
         <a href="index.html">
             <h1 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h1>
@@ -36,10 +37,8 @@
                 </li>
             </ul>
         </nav>
-
-
     </header>
-
+<!-- cover text -->
     <section id="hero-outer">
         <div id="hero-image">
 
@@ -49,6 +48,7 @@
             <h3> A cycle repair shop in the heart of Conwy </h3>
         </div>
     </section>
+    <!-- contact section -->
     <div class="container-fluid contact-us" id="contact-us">
         <h2 id="contact-us-header"> Contact Us</h2>
     </div>
