--- a/services.html
+++ b/services.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- nav bar -->
     <header>
         <a href="index.html">
             <h1 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h1></a>
@@ -37,7 +38,7 @@
             </nav>
         
     </header>
-
+<!-- cover text -->
     <section id="hero-outer">
         <div id="hero-image">
 
@@ -48,6 +49,7 @@
         </div>
 
     </section>
+    <!-- popular services -->
     <section class="service-header">
         <h2>Select from our most popular services</h2> 
             <h2>or</h2> 
