--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Imports for bootstrap, font awesome, google fonts, stylesheet -->
+<!-- Imports for bootstrap, font awesome, google fonts, stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <!-- Favicon -->
+<!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
     <title>The Bike Shed Conwy</title>
     <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+<!-- nav bar -->
     <header>
         <a href="index.html">
             <h1 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h1></a>
@@ -38,7 +39,7 @@
         
 
     </header>
-
+<!-- FOOTER -->
     <section id="hero-outer">
         <div id="hero-image">
         </div>
@@ -48,6 +49,7 @@
         </div>
 
     </section>
+<!-- about section -->
     <section class="why-us">
         <div class="container-fluid why-us" id="why-us">
             <h2 id="why-us-header"> Why choose us to repair your bike?</h2>
