fixed bugs and typos

--- a/booknow.html
+++ b/booknow.html
@@ -67,7 +67,7 @@
                     <select id="service-select" name="service-select">
                     <option value="101"> Flat Tyre Repair</option>
                     <option value="102"> Brake Adjustment</option>
-                    <option value="103"> Brake Adjustment</option>
+                    <option value="103"> Handlebar Adjustment</option>
                     <option value="104"> Gear Adjustment</option>
                     <option value="105"> Chain Replacement</option>
                     <option value="106"> Wheel Truing</option>
