--- a/contact.html
+++ b/contact.html
@@ -54,28 +54,28 @@
     </div>
     <div id="location-icon"><h3>Cycle to us! <i class="fa-solid fa-location-dot"></i></h3>
     </div>
-    <section id="map">
+    <div id="map">
         <div class="ratio ratio-16x9 map ">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2317.632589996434!2d-3.826887086085289!3d53.27978255983083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48651e85d4cd176d%3A0x4c407a5d3d49f90c!2sConwy%20Castle!5e0!3m2!1sen!2suk!4v1685832749676!5m2!1sen!2suk"
             width="600" height="450" style="border: 3px solid #2600ff; border-radius: 10px;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-    </section>
+    </div>
     <section class id="contact-types">
     <div class="row contact">
         <div class="col-md">
             <div class="phone">
                 <h3>Phone <i class="fa-solid fa-phone"></i></h3>
                 <hr>
-                <p>Tel: 0333 344 5637</p>
+                <p><a href="tel:+44 333 344 5637">+44 333 344 5637</a></p>
             </div>
         </div>
         <div class="col-md">
             <div class="email">
                 <h3>E-mail <i class="fa-solid fa-at"></i></h3>
                 <hr>
-                <p>hello@conwybikehub.co.uk</p>
+                <p><a href="mailto:hello@conwybikehub.co.uk">hello@conwybikehub.co.uk</a></p>
             </div>
         </div>
         <div class="col-md">
