--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
 
     </header>
-<!-- FOOTER -->
+<!-- cover text -->
     <section id="hero-outer">
         <div id="hero-image">
         </div>
@@ -59,7 +59,7 @@
                 <div class="left-about-heading">
                 <h3>Experts <i class="fa-solid fa-screwdriver-wrench"></i></h3>
                 <hr>
-                <p>Our technicians are experts in their craft. Cyclists themselves they will take care of your bike as if it were their own.</p>
+                <p>Our technicians are experts in their craft. Cyclists themselves, they will take care of your bike as if it was their own.</p>
                 </div>
             </div>    
             <div class="col-md">
