fixed bootstrap container bug in index.html and added deployment section to readme

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             <div class="phone">
                 <h3>Phone <i class="fa-solid fa-phone"></i></h3>
                 <hr>
-                <p><a href="tel:+44 333 344 5637">+44 333 344 5637</a></p>
+                <p><a href="tel:+443333445637">+44 333 344 5637</a></p>
             </div>
         </div>
         <div class="col-md">
