--- a/index.html
+++ b/index.html
@@ -53,39 +53,41 @@
     <section class="why-us">
         <div class="container-fluid why-us" id="why-us">
             <h2 id="why-us-header"> Why choose us to repair your bike?</h2>
-        </div>
-        <div class="row" id="left-about">
-            <div class="col-md">
-                <div class="left-about-heading">
-                <h3>Experts <i class="fa-solid fa-screwdriver-wrench"></i></h3>
-                <hr>
-                <p>Our technicians are experts in their craft. Cyclists themselves, they will take care of your bike as if it was their own.</p>
+            <div class="row" id="left-about">
+                <div class="col-md">
+                    <div class="left-about-heading">
+                        <h3>Experts <i class="fa-solid fa-screwdriver-wrench"></i></h3>
+                        <hr>
+                        <p>Our technicians are experts in their craft. Cyclists themselves, they will take care of your bike as if
+                            it was their own.</p>
+                    </div>
                 </div>
-            </div>    
-            <div class="col-md">
-                <div class="left-about-heading">
-                <h3>Honest Pricing <i class="fa-solid fa-wallet"></i></h3>
-                <hr>
-                <p>We will always give you the price before we do the work, no hidden extras.</p>
+                <div class="col-md">
+                    <div class="left-about-heading">
+                        <h3>Honest Pricing <i class="fa-solid fa-wallet"></i></h3>
+                        <hr>
+                        <p>We will always give you the price before we do the work, no hidden extras.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="right-about">
+                <div class="col-md">
+                    <div class="right-about-heading">
+                        <h3>Fast Service <i class="fa-solid fa-stopwatch"></i></h3>
+                        <hr>
+                        <p>We will get any repairs back to you in 48 hours, to get you back out riding.</p>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="right-about-heading">
+                        <h3>Free Coffee <i class="fa-solid fa-mug-hot"></i></h3>
+                        <hr>
+                        <p>Grab a coffee and a flick through a selection of magazines while you wait for your repair.</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row" id="right-about">
-            <div class="col-md">
-                <div class="right-about-heading">
-                    <h3>Fast Service <i class="fa-solid fa-stopwatch"></i></h3>
-                    <hr>
-                    <p>We will get any repairs back to you in 48 hours, to get you back out riding.</p>
-                </div>
-            </div>    
-            <div class="col-md">
-                <div class="right-about-heading">
-                    <h3>Free Coffee <i class="fa-solid fa-mug-hot"></i></h3>
-                    <hr>
-                    <p>Grab a coffee and a flick through a selection of magazines while you wait for your repair.</p>
-                </div>
-            </div>
-        </div>    
+            
     </section>  
 <!-- FOOTER -->
 <footer>
