improved line spacing consistency and fixed container bug in contact

--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,7 @@
 <!-- cover text -->
     <section id="hero-outer">
         <div id="hero-image">
-
         </div>
-
         <div id="cover-text">
             <h3> A cycle repair shop in the heart of Conwy </h3>
         </div>
@@ -63,7 +61,7 @@
         </div>
     </div>
     <section class id="contact-types">
-    <div class="row contact">
+    <div class="row contact container-fluid">
         <div class="col-md">
             <div class="phone">
                 <h3>Phone <i class="fa-solid fa-phone"></i></h3>
@@ -103,7 +101,6 @@
                     aria-label="Visit our Instagram page (opens in a new tab)"><i
                         class="fa-brands fa-square-instagram"></i></a></li>
         </ul>
-    
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -115,5 +112,4 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
