--- a/contact.html
+++ b/contact.html
@@ -1,115 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Imports for bootstrap, font awesome, google fonts, stylesheet -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
-    <title>The Bike Shed Conwy - Book Now</title>
-    <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <!-- nav bar -->
-    <header>
-        <a href="index.html">
-            <h1 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h1>
-        </a>
-        <nav>
-            <ul id="menu">
-                <li>
-                    <a href="index.html">Home</a>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Imports for bootstrap, font awesome, google fonts, stylesheet -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+        <!-- Favicon -->
+        <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+        <title>The Bike Shed Conwy - Book Now</title>
+        <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+<!-- nav bar -->
+        <header>
+            <a href="index.html">
+                <h1 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h1>
+            </a>
+            <nav>
+                <ul id="menu">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="booknow.html">Book Now</a>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="active">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+<!-- cover text -->
+        <section id="hero-outer">
+            <div id="hero-image">
+            </div>
+            <div id="cover-text">
+                <h3> A cycle repair shop in the heart of Conwy </h3>
+            </div>
+        </section>
+<!-- contact section -->
+        <div class="container-fluid contact-us" id="contact-us">
+            <h2 id="contact-us-header"> Contact Us</h2>
+        </div>
+        <div id="location-icon"><h3>Cycle to us! <i class="fa-solid fa-location-dot"></i></h3>
+        </div>
+        <div id="map">
+            <div class="ratio ratio-16x9 map ">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2317.632589996434!2d-3.826887086085289!3d53.27978255983083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48651e85d4cd176d%3A0x4c407a5d3d49f90c!2sConwy%20Castle!5e0!3m2!1sen!2suk!4v1685832749676!5m2!1sen!2suk"
+                width="600" height="450" style="border: 3px solid #2600ff; border-radius: 10px;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+        <section class id="contact-types">
+            <div class="row contact container-fluid">
+                <div class="col-md">
+                    <div class="phone">
+                        <h3>Phone <i class="fa-solid fa-phone"></i></h3>
+                        <hr>
+                        <p><a href="tel:+443333445637">+44 333 344 5637</a></p>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="email">
+                        <h3>E-mail <i class="fa-solid fa-at"></i></h3>
+                        <hr>
+                        <p><a href="mailto:hello@conwybikeshed.co.uk">hello@conwybikeshed.co.uk</a></p>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="coffee">
+                        <h3>Chat <i class="fa-solid fa-mug-hot"></i></h3>
+                        <hr>
+                        <p>Drop in to see us and have a coffee.<br> We're open: <br> Mon-Sat 9am - 5pm.<br> On Sunday we go cycling! <i class="fa-solid fa-person-biking fa-flip-horizontal"></i></p>
+                    </div>
+                </div>
+            </div>
+        </section>         
+<!-- FOOTER -->
+        <footer>
+            <ul class="social-networks">
+                <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i
+                            class="fa-brands fa-square-facebook"></i></a>
                 </li>
-                <li>
-                    <a href="services.html">Services</a>
+                <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i
+                            class="fa-brands fa-square-twitter"></i></a>
                 </li>
-                <li>
-                    <a href="booknow.html">Book Now</a>
+                <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Youtube page (opens in a new tab)"><i
+                            class="fa-brands fa-square-youtube"></i></a>
                 </li>
-                <li>
-                    <a href="contact.html" class="active">Contact</a>
+                <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram page (opens in a new tab)"><i
+                            class="fa-brands fa-square-instagram"></i></a>
                 </li>
             </ul>
-        </nav>
-    </header>
-<!-- cover text -->
-    <section id="hero-outer">
-        <div id="hero-image">
-        </div>
-        <div id="cover-text">
-            <h3> A cycle repair shop in the heart of Conwy </h3>
-        </div>
-    </section>
-    <!-- contact section -->
-    <div class="container-fluid contact-us" id="contact-us">
-        <h2 id="contact-us-header"> Contact Us</h2>
-    </div>
-    <div id="location-icon"><h3>Cycle to us! <i class="fa-solid fa-location-dot"></i></h3>
-    </div>
-    <div id="map">
-        <div class="ratio ratio-16x9 map ">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2317.632589996434!2d-3.826887086085289!3d53.27978255983083!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48651e85d4cd176d%3A0x4c407a5d3d49f90c!2sConwy%20Castle!5e0!3m2!1sen!2suk!4v1685832749676!5m2!1sen!2suk"
-            width="600" height="450" style="border: 3px solid #2600ff; border-radius: 10px;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </div>
-    <section class id="contact-types">
-    <div class="row contact container-fluid">
-        <div class="col-md">
-            <div class="phone">
-                <h3>Phone <i class="fa-solid fa-phone"></i></h3>
-                <hr>
-                <p><a href="tel:+443333445637">+44 333 344 5637</a></p>
-            </div>
-        </div>
-        <div class="col-md">
-            <div class="email">
-                <h3>E-mail <i class="fa-solid fa-at"></i></h3>
-                <hr>
-                <p><a href="mailto:hello@conwybikeshed.co.uk">hello@conwybikeshed.co.uk</a></p>
-            </div>
-        </div>
-        <div class="col-md">
-            <div class="coffee">
-                <h3>Chat <i class="fa-solid fa-mug-hot"></i></h3>
-                <hr>
-                <p>Drop in to see us and have a coffee.<br> We're open: <br> Mon-Sat 9am - 5pm.<br> On Sunday we go cycling! <i class="fa-solid fa-person-biking fa-flip-horizontal"></i></p>
-            </div>
-        </div>
-    </div>
-    </section>         
-    <!-- FOOTER -->
-    <footer>
-        <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i
-                        class="fa-brands fa-square-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i
-                        class="fa-brands fa-square-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)"><i
-                        class="fa-brands fa-square-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-square-instagram"></i></a></li>
-        </ul>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-</body>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
