--- a/services.html
+++ b/services.html
@@ -1,197 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Imports for bootstrap, font awesome, google fonts, stylesheet -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
-    <title>The Bike Shed Conwy - Services</title>
-    <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <!-- nav bar -->
-    <header>
-        <a href="index.html">
-            <h1 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h1></a>
-            <nav>
-                <ul id="menu">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="services.html" class="active">Services</a>
-                    </li>
-                    <li>
-                        <a href="booknow.html">Book Now</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- Imports for bootstrap, font awesome, google fonts, stylesheet -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+<!-- Favicon -->
+        <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+        <title>The Bike Shed Conwy - Services</title>
+        <script src="https://kit.fontawesome.com/b45e489d19.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+<!-- nav bar -->
+        <header>
+            <a href="index.html">
+                <h1 id="logo">The Bike Shed Conwy <i class="fa-solid fa-wrench fa-flip-horizontal"></i></h1></a>
+                <nav>
+                    <ul id="menu">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="services.html" class="active">Services</a>
+                        </li>
+                        <li>
+                            <a href="booknow.html">Book Now</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+        </header>
 <!-- cover text -->
-    <section id="hero-outer">
-        <div id="hero-image">
-        </div>
-        <div id="cover-text">
-            <h3> A cycle repair shop in the heart of Conwy </h3>
-        </div>
-    </section>
-    <!-- popular services -->
-    <section class="service-header">
-        <h2>Select from our most popular services</h2> 
-            <h2>or</h2> 
-            <h2>scroll down for a full services list</h2>
-    </section>    
-    <section class="services">
-        <div class="row">
-            <!-- Gear service -->
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img src="assets/images/reargear.webp" class="card-img-top" alt="A close up of a bicycle's rear gears.">
-                    <div class="card-body">
-                        <h5 class="card-title">Gear Service</h5>
-                        <p class="card-text">Service gears and mechanisms</p>
-                        <form style="display: inline" action="booknow.html" method="get">
-                            <button class="btn btn-primary">Book now</button>
-                        </form>
+        <section id="hero-outer">
+            <div id="hero-image">
+            </div>
+            <div id="cover-text">
+                <h3> A cycle repair shop in the heart of Conwy </h3>
+            </div>
+        </section>
+<!-- popular services -->
+        <section class="service-header">
+            <h2>Select from our most popular services</h2> 
+                <h2>or</h2> 
+                <h2>scroll down for a full services list</h2>
+        </section>    
+        <section class="services">
+            <div class="row">
+<!-- Gear service -->
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img src="assets/images/reargear.webp" class="card-img-top" alt="A close up of a bicycle's rear gears.">
+                        <div class="card-body">
+                            <h5 class="card-title">Gear Service</h5>
+                            <p class="card-text">Service gears and mechanisms</p>
+                            <form style="display: inline" action="booknow.html" method="get">
+                                <button class="btn btn-primary">Book now</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+<!-- Fit pedal service -->
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img src="assets/images/pedal2.webp" class="card-img-top" alt="A close up of a bicycle's pedal.">
+                        <div class="card-body">
+                            <h5 class="card-title">Fit Cleated Pedals</h5>
+                            <p class="card-text">Fit clip-in pedals while you wait.</p>
+                            <form style="display: inline" action="booknow.html" method="get">
+                                <button class="btn btn-primary">Book now</button>
+                            </form>
+                        </div>
+                    </div>    
+                </div>
+<!-- Brake service -->
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img src="assets/images/brakedisc.webp" class="card-img-top" alt="A close up of a bicycle's brakedisc.">
+                        <div class="card-body">
+                            <h5 class="card-title">Brake Service</h5>
+                            <p class="card-text">Service v type or disk brakes and repalce cables and pads.</p>
+                            <form style="display: inline" action="booknow.html" method="get">
+                                <button class="btn btn-primary">Book now</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+<!-- Full clean service -->
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img src="assets/images/bikemuddy.webp" class="card-img-top" alt="A close up of muddy bike.">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Bike Clean</h5>
+                            <p class="card-text">Get a full bike clean and re-oiling of chain and gears.</p>
+                            <form style="display: inline" action="booknow.html" method="get">
+                                <button class="btn btn-primary">Book now</button></form>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- Fit pedal service -->
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img src="assets/images/pedal2.webp" class="card-img-top" alt="A close up of a bicycle's pedal.">
-                    <div class="card-body">
-                        <h5 class="card-title">Fit Cleated Pedals</h5>
-                        <p class="card-text">Fit clip-in pedals while you wait.</p>
-                        <form style="display: inline" action="booknow.html" method="get">
-                            <button class="btn btn-primary">Book now</button>
-                        </form>
-                    </div>
-                </div>    
-            </div>
-            <!-- Brake service -->
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img src="assets/images/brakedisc.webp" class="card-img-top" alt="A close up of a bicycle's brakedisc.">
-                    <div class="card-body">
-                        <h5 class="card-title">Brake Service</h5>
-                        <p class="card-text">Service v type or disk brakes and repalce cables and pads.</p>
-                        <form style="display: inline" action="booknow.html" method="get">
-                            <button class="btn btn-primary">Book now</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <!-- Full clean service -->
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card">
-                    <img src="assets/images/bikemuddy.webp" class="card-img-top" alt="A close up of muddy bike.">
-                    <div class="card-body">
-                        <h5 class="card-title">Full Bike Clean</h5>
-                        <p class="card-text">Get a full bike clean and re-oiling of chain and gears.</p>
-                        <form style="display: inline" action="booknow.html" method="get">
-                            <button class="btn btn-primary">Book now</button></form>
-                    </div>
-                </div>
+        </section>
+<!-- Full service list -->
+        <section class="service-header">
+            <h2>Full services list</h2>
+        </section>
+        <div class="servicelist">
+            <div class="container-fluid services-table">
+                <table class="table table-striped table-border table-hover center">
+                    <tr>
+                        <th>Service</th>
+                        <th>Price</th>
+                        <th>Book</th>
+                    </tr>
+                    <tr>
+                        <td>Flat Tyre Repair</td>
+                        <td>£5</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Brake Adjustment</td>
+                        <td>£10</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Gear Adjustment</td>
+                        <td>£10</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Chain Replacement</td>
+                        <td>£15</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Wheel Truing</td>
+                        <td>£20</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Bottom Bracket Repair</td>
+                        <td>£20</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Headset Adjustment</td>
+                        <td>£20</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Pedal Replacement</td>
+                        <td>£10</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Handlebar Tape Replacement</td>
+                        <td>£10</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                    <tr>
+                        <td>Full Service</td>
+                        <td>£100</td>
+                        <td><a href="booknow.html">Book Now</a></td>
+                    </tr>
+                </table>
             </div>
         </div>
-    </section>
-    <!-- Full service list -->
-    <section class="service-header">
-        <h2>Full services list</h2>
-    </section>
-    <div class="servicelist">
-        <div class="container-fluid services-table">
-            <table class="table table-striped table-border table-hover center">
-                 <tr>
-                    <th>Service</th>
-                    <th>Price</th>
-                    <th>Book</th>
-                </tr>
-                <tr>
-                    <td>Flat Tyre Repair</td>
-                    <td>£5</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-                <tr>
-                    <td>Brake Adjustment</td>
-                    <td>£10</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-                 <tr>
-                    <td>Gear Adjustment</td>
-                    <td>£10</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-                <tr>
-                    <td>Chain Replacement</td>
-                    <td>£15</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-                <tr>
-                    <td>Wheel Truing</td>
-                    <td>£20</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-                <tr>
-                    <td>Bottom Bracket Repair</td>
-                    <td>£20</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-                <tr>
-                    <td>Headset Adjustment</td>
-                    <td>£20</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-                <tr>
-                    <td>Pedal Replacement</td>
-                    <td>£10</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-                <tr>
-                    <td>Handlebar Tape Replacement</td>
-                    <td>£10</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-                <tr>
-                    <td>Full Service</td>
-                    <td>£100</td>
-                    <td><a href="booknow.html">Book Now</a></td>
-                </tr>
-            </table>
-        </div>
-    </div>
-    <!-- FOOTER -->
-    <footer>
-        <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
-        </ul>
+<!-- FOOTER -->
+        <footer>
+            <ul class="social-networks">
+                <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+                </li>
+                <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+                </li>
+                <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+                </li>
+                <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                </li>
+            </ul>
         </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-</body>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
